# materia

./: .gitignore  LICENSE  README.md  alembic.ini  flake.nix  mkdocs.yml  pdm.toml  pyproject.toml
docs/: index.md
docs/reference/: app.md  core.md  index.md  models.md  routers.md  security.md  tasks.md
materia/: config.py  main.py
materia-client/: README.md  pyproject.toml
materia-client/src/materia_client/: main.py
materia-server/: README.md  alembic.ini  pyproject.toml
materia-server/src/materia_server/: _logging.py  alembic.ini  app.py  config.py  main.py
materia-server/src/materia_server/app/: app.py  wsgi.py
materia-server/src/materia_server/models/: __init__.py  base.py  directory.py  file.py  repository.py  user.py
materia-server/src/materia_server/models/database/: __init__.py  cache.py  database.py
materia-server/src/materia_server/models/directory/: __init__.py  directory.py
materia-server/src/materia_server/models/file/: __init__.py  file.py
materia-server/src/materia_server/models/migrations/: env.py
materia-server/src/materia_server/models/migrations/versions/: 76191498b728_.py  86dd738cbd40_.py  939b37d98be0_.py
materia-server/src/materia_server/models/repository/: __init__.py  repository.py
materia-server/src/materia_server/models/user/: __init__.py  user.py
materia-server/src/materia_server/routers/: __init__.py  context.py  middleware.py  resources.py
materia-server/src/materia_server/routers/api/: __init__.py  directory.py  file.py  filesystem.py  repository.py  token.py  user.py
materia-server/src/materia_server/routers/api/auth/: __init__.py  auth.py  oauth.py  oauthb.py
materia-server/src/materia_server/routers/api/schema/: __init__.py  auth.py  directory.py  repository.py  token.py  user.py
materia-server/src/materia_server/routers/api/user/: __init__.py  user.py
materia-server/src/materia_server/security/: __init__.py  token.py
materia-web-client/: .gitignore  pyproject.toml
materia-web-client/src/materia-frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.vite.json
materia-web-client/src/materia-frontend/src/: client.ts  index.ts  router.ts
materia-web-client/src/materia-frontend/src/api/: auth.ts  client.ts  directory.ts  index.ts  repository.ts  user.ts
materia-web-client/src/materia-frontend/src/assets/: style.css
materia-web-client/src/materia-frontend/src/components/: Error.vue  NavBar.vue  Warning.vue
materia-web-client/src/materia-frontend/src/components/error/: Error.vue
materia-web-client/src/materia-frontend/src/resources/: index.ts
materia-web-client/src/materia-frontend/src/stores/: index.ts
materia-web-client/src/materia-frontend/src/views/: Base.vue  Home.vue  Repository.vue
materia-web-client/src/materia-frontend/src/views/auth/: SignIn.vue  SignUp.vue
materia-web-client/src/materia-frontend/src/views/error/: NotFound.vue
materia-web-client/src/materia-frontend/src/views/user/: SignIn.vue  SignUp.vue
materia-web-client/src/materia-frontend/src/views/user/preferencies/: Account.vue  Profile.vue
materia-web-client/templates/: base.html
materia/api/: __init__.py  depends.py  filesystem.py  middleware.py  token.py  user.py
materia/api/schema/: __init__.py
materia/db/: __init__.py  base.py  directory.py  file.py  fs_entity.py  link.py  repository.py  user.py
materia/db/migrations/: env.py
materia/db/migrations/versions/: 047a8383cdf1_initial_creation.py  aa2ad59fa7d3_initial_creation.py
src/: config.py  main.py
src/db/: __init__.py  user.py
src/db/migrations/: env.py
src/db/migrations/versions/: 269db1cef2c9_create_a_baseline_migrations.py
src/materia/: __main__.py  _logging.py  config.py  main.py
src/materia/app/: __init__.py  app.py  asgi.py  cli.py
src/materia/core/: __init__.py  cache.py  config.py  cron.py  database.py  filesystem.py  logging.py  misc.py
src/materia/models/: __init__.py  directory.py  file.py  filesystem.py  repository.py  user.py
src/materia/models/auth/: __init__.py  oauth2.py  source.py
src/materia/models/database/: __init__.py  database.py
src/materia/models/migrations/: env.py
src/materia/routers/: __init__.py  docs.py  middleware.py  resources.py  root.py
src/materia/routers/api/: __init__.py  directory.py  file.py  repository.py  tasks.py  user.py
src/materia/routers/api/auth/: auth.py  oauth.py
src/materia/security/: __init__.py  secret_key.py  token.py
src/materia/tasks/: __init__.py  file.py
src/materia_server/app/: __init__.py  asgi.py
src/materia_server/models/: user.py
src/materia_server/models/auth/: __init__.py  oauth2.py  source.py
src/materia_server/models/database/: __init__.py  cache.py  database.py
src/materia_server/routers/api/: __init__.py  directory.py  file.py  user.py
src/materia_server/routers/api/auth/: oauth.py
src/materia_server/security/: password.py
tests/: conftest.py  test_api.py  test_database.py  test_models.py
workspaces/frontend/: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js  vite.config.ts
workspaces/frontend/src/: index.ts  main.ts  router.ts
workspaces/frontend/src/api/: auth.ts  file.ts  index.ts  repository.ts
workspaces/frontend/src/assets/: style.css
workspaces/frontend/src/components/: ContextMenu.vue  CtxMenu.vue  DropdownItem.vue  DropdownMenu.vue  NavBar.vue  Uploader.vue
workspaces/frontend/src/components/icons/: IconDelete.vue  IconDirectory.vue  IconFile.vue  IconUpload.vue
workspaces/frontend/src/directives/: click-outside.ts
workspaces/frontend/src/plugins/: directives.ts
workspaces/frontend/src/store/: index.ts
workspaces/frontend/src/stores/: index.ts
workspaces/frontend/src/views/: AdminSettings.vue  Base.vue  NotFound.vue  Repository.vue  UserPrefs.vue  UserPrefsProfile.vue  UserProfile.vue
workspaces/frontend/src/views/auth/: SignIn.vue
workspaces/frontend/src/views/user/: Preferencies.vue  Profile.vue
