[project]
name = "materia"
version = "0.1.1"
description = "Materia is a simple and fast cloud storage"
authors = [
    {name = "L-Nafaryus", email = "l.nafaryus@gmail.com"},
]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pyright]
reportGeneralTypeIssues = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/packages/server",
    "-e file:///${PROJECT_ROOT}/packages/frontend",
    "-e file:///${PROJECT_ROOT}/packages/docs",
]

[tool.pdm.resolution]
respect-source-order = true

[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.pdm.source]]
name = "elnafo-vcs"
url = "https://vcs.elnafo.ru/api/packages/L-Nafaryus/pypi"
verify_ssl = true
