[project]
name = "materia-frontend"
version = "0.1.1"
description = "Materia frontend"
authors = [
    {name = "L-Nafaryus", email = "l.nafaryus@gmail.com"},
]
dependencies = [
    "loguru<1.0.0,>=0.7.2",
]
requires-python = "<3.12,>=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "black<24.0.0,>=23.3.0",
    "pytest<8.0.0,>=7.3.2",
    "pyflakes<4.0.0,>=3.0.1",
]

[tool.pdm.build]
includes = [ "src/materia_frontend" ]

[tool.pdm.scripts]
npm-install.cmd = "npm install --prefix ./"
npm-run-build.cmd = "npm run build --prefix ./"
move-dist.shell = "rm -vrf src/materia_frontend/dist && mv -v dist src/materia_frontend/ && cp -v templates/* src/materia_frontend/dist"
pre_build.composite = [ "npm-install", "npm-run-build", "move-dist" ]
materia-frontend.call = "materia_frontend.main:client"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pyright]
reportGeneralTypeIssues = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

